--- a/src/App.css
+++ b/src/App.css
@@ -16,13 +16,12 @@
 }
 
 
-
 .header {
   
   text-align: center;
   font-size: 32px;
   font-weight: 600;
-  background-image: linear-gradient(135deg, #FAB2FF 10%, #1904E5 100%);
+  background-image: linear-gradient(135deg, #FF6FD8 10%, #3813C2 100%);
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
 }
@@ -81,6 +80,7 @@
 body {
   /* background-image: url("src/bgImg.jpg"); */
   /* background-image: linear-gradient(135deg, #cc208e 10%, #6713d2 100%); */
+  
   
   background-size: cover;
   background-position: center;
